# rc2021-tr

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Doxyfile  Makefile  Makefile_user.txt  README.md  TR.ioc  check_flag.cmake  cmake-arm-none-eabi.cmake  cmake-flags.cmake  format.sh  rc2021-tr-rm-a.ioc  rc2021_stm32_tr.ioc  stm32init.py
.github/workflows/: doxygen.yml
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
MDK-ARM/: TR.uvoptx  TR.uvprojx  rc2021_stm32_tr.uvoptx  rc2021_stm32_tr.uvprojx  startup_stm32f427xx.lst
MDK-ARM/RTE/_rc2021_stm32_tr/: RTE_Components.h
app/: app.h  app_archery.c  app_archery.h  app_arrow.c  app_arrow.h  app_chassis.c  app_chassis.h  app_debug.c  app_debug.h  app_led.c  app_led.h  app_shoot.c  app_shoot.h  ctrl.h  ctrl_can.c  ctrl_can.h  ctrl_l1s.c  ctrl_l1s.h  ctrl_rc.h  ctrl_serial.c  ctrl_serial.h  ctrl_servo.c  ctrl_servo.h  ctrl_step.c  ctrl_step.h  task_chassis.c  task_chassis.h  task_imu.c  task_led.c  task_servo.c  task_servo.h  task_step.c  task_step.h
application/: ctrl.h  ctrl_can.c  ctrl_can.h  ctrl_pc.c  ctrl_pc.h  ctrl_rc.c  ctrl_rc.h  task_chassis.c  task_chassis.h  task_imu.c  task_imu.h  task_led.c  task_led.h  task_location.c  task_location.h  task_servo.c  task_servo.h  task_step.c  task_step.h  task_test.c  task_test.h
bsp/boards/: bsp.h  bsp_buzzer.c  bsp_buzzer.h  bsp_can.c  bsp_can.h  bsp_delay.c  bsp_delay.h  bsp_dma.h  bsp_flash.c  bsp_flash.h  bsp_gpio.c  bsp_gpio.h  bsp_imu_pwm.c  bsp_imu_pwm.h  bsp_led.c  bsp_led.h  bsp_nvic.c  bsp_nvic.h  bsp_spi.c  bsp_spi.h  bsp_uart.c  bsp_uart.h  bsp_usart.c  bsp_usart.h
bsp/devices/: app_imu.c  imu_ahrs.c  imu_ahrs.h  ist8310.c  ist8310.h  ist8310reg.h  l1s.c  l1s.h  mpu6500.c  mpu6500.h  mpu6500reg.h
component/controller/: ahrs.c  ahrs.h  cc.h  cc_lpf.c  cc_lpf.h  cc_math.c  cc_math.h  cc_pid.c  cc_pid.h
component/devices/: imu_ahrs.c  imu_ahrs.h  ist8310.h  ist8310reg.h  mpu6500.c  mpu6500.h  mpu6500reg.h
doxygen/: Doxyfile
scripts/: LICENSE  README.md  chassis.py  format.sh
scripts/vscjson/: c_cpp_properties.json
vscjson/: c_cpp_properties.json
